--- a/frontend/assets/sass/_variables.scss
+++ b/frontend/assets/sass/_variables.scss
@@ -4,15 +4,21 @@
 $font-family: 'Mulish', sans-serif;
 $title-font: 'Mulish', sans-serif;
 
-$primary-color: #1A2D4E;
-$secondary-color:#E1AC66;
+
+
+$primary-color: #EB008B;
+$secondary-color:#00A6CE;
+$text-content-color:#656565;
+
+
+
+
 $back-maya-ruins: #E6CDAC;
 $back-aquatic-tours: #519488;
 $back-luxury-tours: #256C94;
 $back-adventure-tours: #946451;
 $border-header:#B98A3D;
 $input-text-color: #B4B3B3;
-$text-content-color:#656565;
 $back-grey:#F5F4F4;
 $text-back-blue: #747474;
 $alltours:#656565;
