--- a/frontend/assets/sass/variables.scss
+++ b/frontend/assets/sass/variables.scss
@@ -11,8 +11,10 @@ $font-family: 'Mulish', sans-serif;
 $title-font: 'Mulish', sans-serif;
 
 
-$primary-color: #1A2D4E;
-$secondary-color:#E1AC66;
+$primary-color: #EB008B;
+$secondary-color:#00A6CE;
+
+
 $back-maya-ruins: #E6CDAC;
 $back-aquatic-tours: #519488;
 $back-luxury-tours: #256C94;
