--- a/frontend/assets/sass/_footer.scss
+++ b/frontend/assets/sass/_footer.scss
@@ -1,8 +1,8 @@
 #Footer{
-    background-color: $primary-color;
+    background-color: $secondary-color;
     color: white;
     .logo{
-        width: 218px;
+        width: 130px;
     }
     .links{
         color: white;
