--- a/frontend/assets/sass/_search_engine.scss
+++ b/frontend/assets/sass/_search_engine.scss
@@ -1,13 +1,39 @@
 #search-engine-content{
 
+   /*
+   .title{
+      font-size: $text-semi-title1!important;
+      color: $secondary-color !important;
+   }
+   */
+
+   .v-expansion-panel-header{
+      span{
+         font-size: $text-semi-title1!important;
+         color: $secondary-color !important;
+         font-weight: bold;
+      }
+
+      &--active{
+         background: $secondary-color;
+         span{
+            font-size: $text-semi-title1!important;
+            color: white !important;
+         }
+      }
+   }
   .input-color{
       color: $input-text-color !important;
+      border:  1px solid $input-text-color !important;
+
   }
   .v-input__prepend-outer{
       background-color: white;
       margin:  0 !important;
       border-top-left-radius: 8px;
       border-bottom-left-radius: 8px;
+
+      color: $primary-color !important;
 
   }
 
@@ -19,7 +45,7 @@
   }
 
   .bookBtn{
-     background-color: $secondary-color !important;
+     background-color: $primary-color !important;
      color: white;
      font-weight: bold;
      font-size: $text-semi-title2;
