--- a/frontend/assets/sass/_home.scss
+++ b/frontend/assets/sass/_home.scss
@@ -15,3 +15,60 @@
    cursor: pointer;
 
 }
+
+
+#homePage{
+   .sliderPosition{
+      margin-top: -170px !important;
+      .slideHomeTop{
+            z-index: 5;
+            position: relative;
+            margin-top: 0;
+            z-index: 5;
+            position: relative;
+            .v-window{
+               overflow: inherit !important;
+            }
+
+            .v-window__next {
+                  // margin: 0 -18px !important;
+                  //z-index: 9000 !important;
+                  .v-btn__content {
+                     box-shadow: 0px 4px 15px 0 rgba(0, 0, 0, 0.6);
+                     -moz-box-shadow: 0px 4px 15px 0 rgba(0, 0, 0, 0.6);
+                     -webkit-box-shadow: 0px 4px 15px 0 rgba(0, 0, 0, 0.6);
+                     -o-box-shadow: 0px 4px 15px 0 rgba(0, 0, 0, 0.6);
+                     width: 50px;
+                     height: 50px;
+                     border-radius: 50%;
+                  }
+            }
+            .v-window__prev {
+                  //margin: 0 -18px !important;
+                  //z-index: 9000 !important;
+                  .v-btn__content {
+                     box-shadow: 0px 4px 15px 0 rgba(0, 0, 0, 0.6);
+                     -moz-box-shadow: 0px 4px 15px 0 rgba(0, 0, 0, 0.6);
+                     -webkit-box-shadow: 0px 4px 15px 0 rgba(0, 0, 0, 0.6);
+                     -o-box-shadow: 0px 4px 15px 0 rgba(0, 0, 0, 0.6);
+                     width: 50px;
+                     height: 50px;
+                     border-radius: 50%;
+                  }
+            }
+            .v-window__next,
+            .v-window__prev {
+                  margin: 0 -18px !important;
+                  z-index: 0 !important;
+                  .v-icon.v-icon {
+                     background-color: white;
+                     color: $primary-color;
+                     font-size: 2.9rem !important;
+                     width: 50px;
+                     height: 50px;
+                     border-radius: 50%;
+                  }
+            }
+      }
+   }
+}
