--- a/frontend/assets/sass/_home.scss
+++ b/frontend/assets/sass/_home.scss
@@ -72,3 +72,17 @@
       }
    }
 }
+
+
+.destinationsImg{
+   width: 100%;
+   height: 290px;
+   cursor: pointer;
+   .img-name{
+      top: auto;
+      color: white;
+      font-size: $text-semi-title2;
+      font-weight: bold;
+      margin: auto 15px 15px 15px;
+   }
+}
