--- a/frontend/assets/sass/_home.scss
+++ b/frontend/assets/sass/_home.scss
@@ -18,14 +18,21 @@
 
 
 #homePage{
+   .sliderCo{
+      //background-image: url('/images/homeBanners/vista-al-mar-desde-tulum.jpg') ;
+      background-position: center;
+      width: 100%;
+      //margin-top: 100px;
+      height: 500px;
+   }
    .sliderPosition{
-      margin-top: -170px !important;
+      margin-top: -185px !important;
+      position:static;
+      z-index: 7;
       .slideHomeTop{
-            z-index: 5;
-            position: relative;
             margin-top: 0;
-            z-index: 5;
-            position: relative;
+            z-index: 0;
+            //position: relative;
             .v-window{
                overflow: inherit !important;
             }
