--- a/frontend/assets/sass/_variables.scss
+++ b/frontend/assets/sass/_variables.scss
@@ -231,3 +231,70 @@ body{
 .icon-whatsapp:before {
   content: "\e90f";
 }
+
+
+@font-face {
+   font-family: 'icomoon2';
+   src:  url('~/assets/fonts/icomoon2.eot?lr07mz');
+   src:  url('~/assets/fonts/icomoon2.eot?lr07mz#iefix') format('embedded-opentype'),
+     url('~/assets/fonts/icomoon2.ttf?lr07mz') format('truetype'),
+     url('~/assets/fonts/icomoon2.woff?lr07mz') format('woff'),
+     url('~/assets/fonts/icomoon2.svg?lr07mz#icomoon') format('svg');
+   font-weight: normal;
+   font-style: normal;
+   font-display: block;
+ }
+
+
+
+[class^="icon2-"], [class*=" icon2-"] {
+   /* use !important to prevent issues with browser extensions that change fonts */
+   font-family: 'icomoon2' !important;
+   speak: never;
+   font-style: normal;
+   font-weight: normal;
+   font-variant: normal;
+   text-transform: none;
+   line-height: 1;
+
+   /* Better Font Rendering =========== */
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+ }
+
+ .icon2-alimentos:before {
+   content: "\e900";
+ }
+ .icon2-disponibilidad:before {
+   content: "\e901";
+ }
+ .icon2-duracion:before {
+   content: "\e902";
+ }
+ .icon2-idiomas:before {
+   content: "\e903";
+ }
+ .icon2-link:before {
+   content: "\e904";
+ }
+ .icon2-mail:before {
+   content: "\e905";
+ }
+ .icon2-share-box:before {
+   content: "\e906";
+ }
+ .icon2-share:before {
+   content: "\e907";
+ }
+ .icon2-transportacion:before {
+   content: "\e908";
+ }
+ .icon2-video:before {
+   content: "\e909";
+ }
+ .icon2-voucher:before {
+   content: "\e90a";
+ }
+ .icon2-whatsapp:before {
+   content: "\e90b";
+ }
