--- a/frontend/assets/sass/_home.scss
+++ b/frontend/assets/sass/_home.scss
@@ -9,9 +9,9 @@
 }
 
 .all-toursHome{
-   font-size: 1.75rem !important;
-   color: $primary-color !important;
-   text-decoration: none;
+   font-size: $text-semi-title2 !important;
+   color: $secondary-color !important;
+   text-decoration: underline;
    cursor: pointer;
 
 }
