--- a/frontend/assets/sass/_variables.scss
+++ b/frontend/assets/sass/_variables.scss
@@ -61,7 +61,7 @@ body{
   font-size: $text-title;
   color: $primary-color;
   font-weight: bold;
-  text-transform: uppercase;
+  text-transform: initial;
 }
 
 .background-grey{
