--- a/frontend/assets/sass/_home.scss
+++ b/frontend/assets/sass/_home.scss
@@ -91,6 +91,7 @@
       font-size: $text-semi-title2;
       font-weight: bold;
       margin: auto 15px 15px 15px;
+      word-break: break-word;
    }
 }
 
