--- a/frontend/assets/sass/_header.scss
+++ b/frontend/assets/sass/_header.scss
@@ -190,8 +190,8 @@
 
    }
   .listSub{
-     // background-color: $primary-color !important;
-      background-color: red !important;
+      background-color: $primary-color !important;
+     // background-color: red !important;
 
      a{
         color:  white !important;
