--- a/frontend/assets/sass/_variables.scss
+++ b/frontend/assets/sass/_variables.scss
@@ -63,6 +63,12 @@ body{
   font-weight: bold;
   text-transform: initial;
 }
+.title-section2{
+   font-size: $text-semi-title1;
+   color: $secondary-color !important;
+   font-weight: bold;
+   text-transform: initial;
+ }
 
 .background-grey{
    background-color: $back-grey !important;
@@ -297,4 +303,40 @@ body{
  }
  .icon2-whatsapp:before {
    content: "\e90b";
+ }
+
+
+
+
+
+@font-face {
+   font-family: 'icomoon3';
+   src:  url('~/assets/fonts/icomoon3.eot?lr07mz');
+   src:  url('~/assets/fonts/icomoon3.eot?lr07mz#iefix') format('embedded-opentype'),
+     url('~/assets/fonts/icomoon3.ttf?lr07mz') format('truetype'),
+     url('~/assets/fonts/icomoon3.woff?lr07mz') format('woff'),
+     url('~/assets/fonts/icomoon3.svg?lr07mz#icomoon') format('svg');
+   font-weight: normal;
+   font-style: normal;
+   font-display: block;
+ }
+
+ [class^="icon3-"], [class*=" icon3-"] {
+   /* use !important to prevent issues with browser extensions that change fonts */
+   font-family: 'icomoon3' !important;
+   speak: never;
+   font-style: normal;
+   font-weight: normal;
+   font-variant: normal;
+   text-transform: none;
+   line-height: 1;
+
+   /* Better Font Rendering =========== */
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+ }
+
+
+ .icon3-tripadvisor-cb:before {
+   content: "\e900";
  }
