--- a/frontend/assets/sass/_home.scss
+++ b/frontend/assets/sass/_home.scss
@@ -96,6 +96,15 @@
 }
 
 
+.meses-sin-intereses{
+   color: $primary-color;
+   font-size: 2.25rem;
+   font-weight: bold;
+   &-down{
+      color: $text-content-color;
+      font-size: $text-title;
+   }
+}
 
 
 
