--- a/frontend/assets/sass/_variables.scss
+++ b/frontend/assets/sass/_variables.scss
@@ -340,3 +340,11 @@ body{
  .icon3-tripadvisor-cb:before {
    content: "\e900";
  }
+
+
+
+ .rowMenuMobile{
+   overflow: auto;
+   -webkit-overflow-scrolling: touch;
+
+ }
